--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "design-system-roleseeker",
-  "description": "A design system built with Next.js, Storybook, and Tailwind CSS",
-  "version": "3.0.10",
+  "name": "lora-design-system",
+  "description": "A design system and component library for building web applications with React and Next.js.",
+  "license": "MIT",
+  "type": "module",
+  "version": "0.0.1",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -23,38 +25,36 @@
     "rollup": "rollup -c --bundleConfigAsCjs"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@glidejs/glide": "^3.7.1",
-    "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "rollup": "^4.43.0",
-    "rollup-plugin-postcss": "^4.0.2"
+    "@storybook/nextjs": "^10.0.3",
+    "next": "16",
+    "react": "^19",
+    "react-aria-components": "^1",
+    "react-dom": "^19",
+    "rollup": "^4"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "4.1.2",
     "@eslint/eslintrc": "^3",
-    "@rollup/plugin-commonjs": "^28.0.5",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@storybook/addon-onboarding": "^9.0.6",
-    "@storybook/nextjs": "^9.0.6",
-    "@tailwindcss/postcss": "^4",
-    "@types/glidejs__glide": "^3.6.6",
-    "@types/node": "^20",
+    "@rollup/plugin-commonjs": "^29",
+    "@rollup/plugin-node-resolve": "^16",
+    "@rollup/plugin-typescript": "^12",
+    "@storybook/addon-a11y": "10.0.2",
+    "@storybook/addon-docs": "10.0.2",
+    "@storybook/addon-vitest": "10.0.2",
+    "@storybook/nextjs-vite": "^10.0.2",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser-playwright": "^4.0.6",
+    "@vitest/coverage-v8": "^4.0.6",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "eslint-plugin-storybook": "^9.0.6",
-    "rollup-plugin-dts": "^6.2.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "storybook": "^9.0.6",
-    "tailwindcss": "^4",
+    "eslint-config-next": "^16",
+    "eslint-plugin-storybook": "^10",
+    "playwright": "^1.56.1",
+    "rollup-plugin-dts": "^6.2.3",
+    "storybook": "^10",
     "tsup": "^8.5.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.6"
   }
 }
