--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@storybook/addon-a11y": "10.0.2",
     "@storybook/addon-docs": "10.0.2",
     "@storybook/addon-vitest": "10.0.2",
+    "@storybook/manager-api": "^8.6.14",
     "@storybook/nextjs-vite": "^10.0.2",
+    "@storybook/theming": "^8.6.14",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
