feat: add ButtonGroup, Backdrop, Snackbar, and InputGroup components with styles and stories
- Implemented ButtonGroupComponent and ButtonGroupItem with various styles (contained, outlined, text) and sizes (small, medium, large).
- Created BackdropComponent for overlay functionality with optional invisibility.
- Developed SnackbarComponent for displaying messages with different severities and positions, including auto-hide functionality.
- Introduced InputGroupComponent for form inputs with adornments, helper text, and error handling.
- Added corresponding CSS modules for styling each component.
- Created Storybook stories for all new components to demonstrate usage and variations.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.2",
     "@eslint/eslintrc": "^3",
+    "@iconify-icon/react": "^3.0.3",
     "@rollup/plugin-commonjs": "^29",
     "@rollup/plugin-node-resolve": "^16",
     "@rollup/plugin-typescript": "^12",
