--- a/package.json
+++ b/package.json
@@ -1,28 +1,63 @@
 {
-  "name": "lora-design-system",
-  "description": "A design system and component library for building web applications with React and Next.js.",
+  "name": "@henriquecosta/lora-ds",
+  "description": "A comprehensive design system and component library for building accessible web applications with React and Next.js. Built with React Aria Components.",
+  "version": "1.0.0",
   "license": "MIT",
+  "author": "Henrique",
   "type": "module",
-  "version": "0.0.1",
   "private": false,
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./styles": "./dist/styles/globals.css",
+    "./globals.css": "./dist/styles/globals.css"
+  },
   "files": [
     "dist",
-    "dist/*.css",
-    "dist/*.js",
-    "dist/*.mjs"
+    "README.md",
+    "LICENSE"
   ],
+  "keywords": [
+    "react",
+    "nextjs",
+    "design-system",
+    "component-library",
+    "ui-components",
+    "react-aria",
+    "accessible",
+    "a11y",
+    "typescript",
+    "css-modules"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/lora-design-system.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/lora-design-system/issues"
+  },
+  "homepage": "https://github.com/yourusername/lora-design-system#readme",
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "react-aria-components": "^1.0.0",
+    "@iconify-icon/react": "^3.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "build:lib": "tsup",
+    "prepublishOnly": "yarn build:lib",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "rollup": "rollup -c --bundleConfigAsCjs"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@storybook/nextjs": "^10",
