--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
   },
   "homepage": "https://github.com/yourusername/lora-design-system#readme",
   "peerDependencies": {
+    "@iconify-icon/react": "^3.0.0",
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
     "react-aria-components": "^1.0.0",
-    "@iconify-icon/react": "^3.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "scripts": {
     "dev": "next dev --turbopack",
@@ -81,8 +81,8 @@
     "@storybook/nextjs-vite": "^10.0.2",
     "@storybook/theming": "^8.6.14",
     "@types/node": "^24",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitest/browser-playwright": "^4.0.6",
     "@vitest/coverage-v8": "^4.0.6",
     "eslint": "^9",
