--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@henriquecosta/lora-ds",
+  "name": "lora-ds",
   "description": "A comprehensive design system and component library for building accessible web applications with React and Next.js. Built with React Aria Components.",
   "version": "1.0.0",
   "license": "MIT",
