fix: update import paths in README and correct versioning in package.json

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "lora-ds",
   "description": "A comprehensive design system and component library for building accessible web applications with React and Next.js. Built with React Aria Components.",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "MIT",
   "author": "Henrique",
   "type": "module",
   "private": false,
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./styles": "./dist/styles/globals.css",
     "./globals.css": "./dist/styles/globals.css"
