--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "lora-ds",
   "description": "A comprehensive design system and component library for building accessible web applications with React and Next.js. Built with React Aria Components.",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "license": "MIT",
-  "author": "Henrique",
+  "author": "Henrique Costa",
   "type": "module",
   "private": false,
   "main": "./dist/index.cjs",
@@ -61,10 +61,11 @@
   },
   "dependencies": {
     "@storybook/nextjs": "^10.1.9",
+    "lora-ds": "^1.0.5",
     "next": "16",
-    "react": "^19",
-    "react-aria-components": "^1",
-    "react-dom": "^19",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-aria-components": "^1.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "rollup": "^4"
   },
   "devDependencies": {
