--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lora-ds",
   "description": "A comprehensive design system and component library for building accessible web applications with React and Next.js. Built with React Aria Components.",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "license": "MIT",
   "author": "Henrique Costa",
   "type": "module",
@@ -42,11 +42,12 @@
   "bugs": {
     "url": "https://github.com/HenriqueCosta05/Lora_DS/issues"
   },
-  "homepage": "https://github.com/HenriqueCosta05/Lora_DS#readme",
+  "homepage": "https://lora-design-system.vercel.app/",
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "react-aria-components": "^1.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "@iconify-icon/react": "^3"
   },
   "scripts": {
     "dev": "next dev --turbopack",
@@ -69,7 +70,6 @@
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.3",
     "@eslint/eslintrc": "^3",
-    "@iconify-icon/react": "^3",
     "@rollup/plugin-commonjs": "^29",
     "@rollup/plugin-node-resolve": "^16",
     "@rollup/plugin-typescript": "^12",
