--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "react-aria-components": "^1.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "@iconify-icon/react": "^3"
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "scripts": {
     "dev": "next dev --turbopack",
@@ -90,6 +89,7 @@
     "storybook": "^10.1.9",
     "tsup": "^8.5.0",
     "typescript": "^5",
-    "vitest": "^4.0.6"
+    "vitest": "^4.0.6",
+    "@iconify-icon/react": "^3"
   }
 }
